# python-project-template

./: .flake8  .pre-commit-config.yaml  Makefile  Pipfile  README.md  main.py  pyproject.toml  utils.py
.github/workflows/: python-package.yml
tests/: test_utils.py
