[project]
name = "python-project-template"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "bandit[toml]",
    "pip-audit",
    "pre-commit",
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 127
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
